QHeaderView - do not keep indexes from an obsolete model

When we call setModel persistentHiddenSections are no longer relevant.
It contains indexes from the previous model.

This solves:

Task-number: QTBUG-18196

Change-Id: Ida02fa63a915695e3730fd63995ac5f8520ae827
Reviewed-by: Andy Shaw <andy.shaw@digia.com>
Reviewed-by: Stephen Kelly <stephen.kelly@kdab.com>

cregit: bf909bd637e4910a75b60df3b3ca5f2dd79515e4 https://github.com/qt/qtbase/commit/bf909bd637e4910a75b60df3b3ca5f2dd79515e4